[package]
name = "poly_cls"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.227", features = ["derive"] }
tokio-postgres = { version = "0.7.14", features = ["with-chrono-0_4"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
reqwest = {version="0.12.23", features=["json"]}
csv = "1.3.1"
tokio = { version = "1.47.1", features = ["full"] }
chrono = { version = "0.4.39", features = ["serde"] }
config = "0.15.6"
